# argos_bridge

./: .gitignore  CMakeLists.txt  fitness.txt  package.xml  trajectory.txt
argos_worlds/: bug.argos  bug.argos.orig  bug_ros.argos  demo.argos  rand_env_template.argos  random_environment.argos  simple.argos  test_out_environment.argos  two_walls_WF_NEAT_hybrid.argos  wall_following_test.argos
argos_worlds/rand_environments/: no_walls.argos  rand_env_1.argos  rand_env_2.argos  rand_env_3.argos  rand_env_4.argos  rand_env_5.argos  rand_env_6.argos  rand_env_7.argos  rand_env_8.argos  two_walls.argos  two_walls_reverse.argos
argos_worlds/simple_environments/: no_walls.argos  no_walls_no_neat.argos  no_walls_no_neat_old.argos  one_wall.argos  two_walls.argos  two_walls_mod.argos
ext_lib/NEAT/: CMakeLists.txt
ext_lib/NEAT/include/: genome.h  neat.h  organism.h
ext_lib/NEAT/src/: genome.cpp  neat.cpp  network.cpp  organism.cpp  population.cpp  species.cpp
launch/: argos_timed_launch.launch  launch_NEAT.sh  launch_NEAT.sh.orig  launch_hybrid_WF_NEAT.launch  launch_simple.sh
matlab/: argos_plot_fitness_scores.m  argos_ros_test.m  generate_environments.m  generate_environments_manual.m
msg/: Rangebearing.msg  RangebearingList.msg
plugin/: CMakeLists.txt
plugin/argos_ros_bot/: CMakeLists.txt  CMakeLists.txt.orig  argos_ros_bot.cpp  argos_ros_bot.h  argos_ros_bot_NEAT.cpp  argos_ros_bot_NEAT.h  argos_ros_bot_WF.cpp  argos_ros_bot_WF.h  argos_ros_bot_WF_NEAT.cpp  argos_ros_bot_WF_NEAT.h  entm_memory.cpp  entm_memory.h
plugin/loop_functions/: CMakeLists.txt  fitness_score_loop_function.cpp  fitness_score_loop_function.cpp.orig  fitness_score_loop_function.h  master_loop_function.cpp  master_loop_function.cpp.orig  master_loop_function.h  random_environment_generator.cpp  random_environment_generator.cpp.orig  random_environment_generator.h  trajectory_loop_functions.cpp  trajectory_loop_functions.h
plugin/simulation/: CMakeLists.txt  argos_ros_start_simulation.cpp  argos_ros_start_simulation.cpp.orig  argos_ros_start_simulation.h
scripts/: NEAT_controller.py  simple_controller.py
srv/: GetCmds.srv  StartSim.srv  argos_ros_reset_sim.srv  argos_ros_start_sim.srv  argos_ros_stop_sim.srv
